--- a/Bunga.html
+++ b/Bunga.html
@@ -19,8 +19,12 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Ini yaa bunganya
+      virtual aja hehehe
+      soalnya kalo asli mati mulu
+      loveee you sayangg kuuu
+      selamat ulang tahun`;
+      musik = `Musik1.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
