--- a/evitaku/Bunga.html
+++ b/evitaku/Bunga.html
@@ -19,8 +19,12 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Haii sayangkuu
+      ini ya bunganyaa
+      bentuknya virtual biar ga gampang mati hehe
+      loveee youuu sayangkuuu
+      hbddd yaaa, muaachhh`;
+      musik = `Musik1.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
